[gd_scene load_steps=20 format=3 uid="uid://dvmfrbvdfsccv"]

[ext_resource type="Texture2D" uid="uid://cl1u0r7vecvec" path="res://assets/图片/test.png" id="1_76uai"]
[ext_resource type="Script" path="res://页面/登录/登录.gd" id="1_plsbl"]
[ext_resource type="FontFile" uid="uid://blrj8prp033mp" path="res://assets/字体/AaCaoKeSongMianBaoYuan-2.ttf" id="3_watk8"]
[ext_resource type="StyleBox" uid="uid://tpntdso7nel4" path="res://页面/登录/登录弹窗.tres" id="4_dj5ua"]
[ext_resource type="VideoStream" path="res://assets/视频/running_jump1.ogv" id="4_ky4c5"]
[ext_resource type="Texture2D" uid="uid://3swvdndgomla" path="res://assets/图标/关闭 (1).svg" id="5_31eik"]
[ext_resource type="VideoStream" path="res://assets/视频/running_jump2.ogv" id="5_igfab"]
[ext_resource type="VideoStream" path="res://assets/视频/running_jump3.ogv" id="6_7uxxc"]
[ext_resource type="VideoStream" path="res://assets/视频/running_jump4.ogv" id="7_rg3rc"]
[ext_resource type="VideoStream" path="res://assets/视频/running_jump5.ogv" id="8_483j6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6kchd"]
bg_color = Color(0.866667, 0.815686, 0.756863, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2mi7"]
bg_color = Color(0.431373, 0.431373, 0.431373, 0)
border_width_left = 80
border_width_top = 390
border_width_right = 80
border_width_bottom = 440
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdnt0"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 35
corner_radius_bottom_left = 35
expand_margin_right = 291.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qv5gn"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 15
border_width_top = 15
border_width_bottom = 15
border_color = Color(1, 1, 1, 1)
corner_radius_top_right = 35
corner_radius_bottom_right = 35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt8vu"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(0.705882, 0.627451, 0.537255, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0.705882, 0.627451, 0.537255, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqeli"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(0.933367, 0.908719, 0.878054, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0.187176, 0.187176, 0.187176, 0.6)
shadow_size = 20
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vocip"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_color = Color(0.187176, 0.187176, 0.187176, 0.6)
shadow_size = 20
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ofra"]
bg_color = Color(1, 1, 1, 0.772549)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_ccn1v"]
blend_mode = 3

[node name="登录" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_plsbl")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 750.0
offset_bottom = 1334.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6kchd")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.54902)
layout_mode = 2
texture = ExtResource("1_76uai")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n2mi7")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/TextureRect/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="邮箱" type="HBoxContainer" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="邮箱" type="Label" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/邮箱"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_kdnt0")
text = "邮箱"

[node name="输入邮箱" type="LineEdit" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/邮箱"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/caret_color = Color(0.258303, 0.230552, 0.225926, 1)
theme_override_colors/font_placeholder_color = Color(0.45665, 0.415178, 0.408255, 1)
theme_override_colors/font_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_qv5gn")
theme_override_styles/normal = SubResource("StyleBoxFlat_qv5gn")
placeholder_text = "请输入邮箱"
caret_blink = true

[node name="密码" type="HBoxContainer" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="密码" type="Label" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/密码"]
layout_mode = 2
theme_override_colors/font_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_kdnt0")
text = "密码"

[node name="输入密码" type="LineEdit" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/密码"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/caret_color = Color(0.258303, 0.230552, 0.225926, 1)
theme_override_colors/font_placeholder_color = Color(0.45665, 0.415178, 0.408255, 1)
theme_override_colors/font_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 45
theme_override_styles/focus = SubResource("StyleBoxFlat_qv5gn")
theme_override_styles/normal = SubResource("StyleBoxFlat_qv5gn")
placeholder_text = "请输入密码"
caret_blink = true
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="返回" type="Button" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.206589, 0.182871, 0.180252, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_xt8vu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nqeli")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nqeli")
theme_override_styles/normal = SubResource("StyleBoxFlat_vocip")
text = "返 回"

[node name="登录" type="Button" parent="PanelContainer/TextureRect/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.206589, 0.182871, 0.180252, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0.207843, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_xt8vu")
theme_override_styles/hover = SubResource("StyleBoxFlat_nqeli")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nqeli")
theme_override_styles/normal = SubResource("StyleBoxFlat_vocip")
text = "登 录"

[node name="PopupPanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(400, 200)
layout_mode = 0
offset_left = 179.0
offset_top = 631.0
offset_right = 579.0
offset_bottom = 831.0
theme_override_styles/panel = ExtResource("4_dj5ua")

[node name="关闭弹窗" type="TextureButton" parent="PopupPanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("5_31eik")

[node name="失败" type="Label" parent="PopupPanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.203922, 0.184314, 0.180392, 1)
theme_override_fonts/font = ExtResource("3_watk8")
theme_override_font_sizes/font_size = 50
text = "邮箱未注册
或密码错误"
horizontal_alignment = 1

[node name="白色背景板" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 750.0
offset_bottom = 1334.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ofra")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ccn1v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = -170.0
offset_right = 735.0
offset_bottom = 550.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
stream = ExtResource("4_ky4c5")
autoplay = true
loop = true

[node name="VideoStreamPlayer2" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ccn1v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 96.0
offset_right = 735.0
offset_bottom = 816.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
stream = ExtResource("5_igfab")
autoplay = true
loop = true

[node name="VideoStreamPlayer3" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ccn1v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 362.0
offset_right = 735.0
offset_bottom = 1082.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
stream = ExtResource("6_7uxxc")
autoplay = true
loop = true

[node name="VideoStreamPlayer4" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ccn1v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 630.0
offset_right = 735.0
offset_bottom = 1350.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
stream = ExtResource("7_rg3rc")
autoplay = true
loop = true

[node name="VideoStreamPlayer5" type="VideoStreamPlayer" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("CanvasItemMaterial_ccn1v")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.0
offset_top = 880.0
offset_right = 735.0
offset_bottom = 1600.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 8
stream = ExtResource("8_483j6")
autoplay = true
loop = true

[connection signal="pressed" from="PanelContainer/TextureRect/PanelContainer/VBoxContainer/HBoxContainer/返回" to="." method="_on_返回_pressed"]
[connection signal="pressed" from="PanelContainer/TextureRect/PanelContainer/VBoxContainer/HBoxContainer/登录" to="." method="_on_登录_pressed"]
[connection signal="pressed" from="PopupPanelContainer/关闭弹窗" to="." method="_on_关闭弹窗_pressed"]
